--- a/Initial Work.ipynb
+++ b/Initial Work.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing Packages And Basic Set up"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +35,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,67 +51,87 @@
     "file_path = \"C://Users/miste/Documents/Causal_ML/\"\n",
     "x = pd.read_stata(file_path + \"maindata.dta\", convert_categoricals=False)\n",
     "\n",
-    "# Importing laws_csv, cleaning it and merging with maindata\n",
+    "# Importing laws_csv, cleaning it\n",
     "laws_csv = pd.read_csv(file_path + \"When_Were_Laws.csv\")\n",
-    "laws_csv = laws_csv[np.logical_not(np.isnan(laws_csv[\"FIPS\"]))]\n",
-    "\n",
-    "laws_csv = laws_csv.drop(\"State_Name\", axis=1)\n",
+    "laws_csv = laws_csv[np.logical_not(np.isnan(laws_csv[\"FIPS\"]))]  # FIPS codes identify states\n",
+    "laws_csv = laws_csv.drop(\"State_Name\", axis=1)  # Dropping as useless\n",
     "laws_csv = laws_csv.rename({'FIPS': 'stfips'}, axis=1) \n",
     "\n",
+    "# Merging\n",
     "merged = pd.merge(laws_csv, x, on='stfips', how='outer')\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 137,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Super basic model, we only look at 1997\n",
-    "# We drop all of the NaN rows for the variables we are interested in. This leaves us with: 864922 observations\n",
-    "\n",
-    "basic_merged = merged.copy()\n",
-    "\n",
-    "basic_merged = basic_merged[basic_merged[\"Year_Implemented\"].str.contains(\"always\")==False]\n",
-    "basic_merged = basic_merged.replace(\"never\", \"1000000\")  # Means that the indicator for year will always equal 1\n",
-    "basic_merged[\"Year_Implemented\"] = basic_merged[\"Year_Implemented\"].astype(int) # converting to int\n",
-    "\n",
-    "basic_merged[\"year_indic\"] = (basic_merged[\"year\"] >= basic_merged[\"Year_Implemented\"])  # indicator for if treatment has occured in state i\n",
-    "basic_merged[\"treatment\"] = basic_merged[\"under19\"] * basic_merged[\"year_indic\"]\n",
-    "\n",
-    "list_of_confounders = [ \"fownu18\", \"fpovcut\", \"povll\", \"faminctm1\", \"a_maritl\"] \n",
-    "list_of_confounders += [\"a_hga\",  \"anykids\", \"year\", \"stfips\", \"disability\", \"elig\"] \n",
-    "\n",
-    "#list_of_confounders += [\"noemp_insured\", \"disability\"] \n",
-    "# Dropping years  outside of [1995,2000] \n",
-    "basic_merged = basic_merged[basic_merged[\"year\"] <= 2000]\n",
-    "basic_merged = basic_merged[basic_merged[\"year\"] >= 1995]\n",
-    "\n",
-    "basic_merged = basic_merged[list_of_confounders + [\"treatment\", \"pubonly\", \"insured\", \"privonly\", \"Year_Implemented\"]]\n",
-    "basic_merged = basic_merged.dropna(axis = 0)\n",
-    "\n",
-    "confounders_and_treat = basic_merged[list_of_confounders + [\"treatment\"]]\n",
-    "confounders_no_treat = basic_merged[list_of_confounders]\n",
-    "\n",
-    "y_var = basic_merged[\"privonly\"]"
+    "Cleaning Datasets, only interested in the 1997 states. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basic_merged = merged.copy()  # To allow for re-running \n",
+    "\n",
+    "# Dropping states who were treated < 97 (i.e. they always had programs)\n",
+    "basic_merged = basic_merged[basic_merged[\"Year_Implemented\"].str.contains(\"always\")==False]  \n",
+    "\n",
+    "# Making it so that \"never-treated\" states are treated at T = infinity\n",
+    "basic_merged = basic_merged.replace(\"never\", \"1000000\") \n",
+    "basic_merged[\"Year_Implemented\"] = basic_merged[\"Year_Implemented\"].astype(int) # converting to int\n",
+    "\n",
+    "# indicator for if treatment has occured in state i\n",
+    "basic_merged[\"year_indic\"] = (basic_merged[\"year\"] >= basic_merged[\"Year_Implemented\"]) \n",
+    "\n",
+    "# Indicator for if the individual was treated (i.e. under 19 and in a state who added a law)\n",
+    "basic_merged[\"treatment\"] = basic_merged[\"under19\"] * basic_merged[\"year_indic\"]\n",
+    "\n",
+    "# Generating list of confounders of interest, these are not necessarily optimal. \n",
+    "list_of_confounders = [ \"fownu18\", \"fpovcut\", \"povll\", \"faminctm1\", \"a_maritl\"] \n",
+    "list_of_confounders += [\"a_hga\",  \"anykids\", \"year\", \"stfips\", \"disability\", \"elig\"] \n",
+    "\n",
+    "# Dropping years  outside of [1995,2000] \n",
+    "basic_merged = basic_merged[basic_merged[\"year\"] <= 2000]\n",
+    "basic_merged = basic_merged[basic_merged[\"year\"] >= 1995]\n",
+    "\n",
+    "# Subsetting our dataset to only include the columns we want, and dropping all rows with empty entries. \n",
+    "basic_merged = basic_merged[list_of_confounders + [\"treatment\", \"pubonly\", \"insured\", \"privonly\", \"Year_Implemented\"]]\n",
+    "basic_merged = basic_merged.dropna(axis = 0)\n",
+    "\n",
+    "# Setting up matrices with confounders and either the treatment or no treatment\n",
+    "# In practice, we only use the former. But the latter is useful for predicting hat(g)\n",
+    "confounders_and_treat = basic_merged[list_of_confounders + [\"treatment\"]]\n",
+    "confounders_no_treat = basic_merged[list_of_confounders]\n",
+    "\n",
+    "# Outcome of interest, this can be set to: [ \"pubonly\", \"insured\", \"privonly\"]\n",
+    "y_var = basic_merged[\"privonly\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fitting Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Score: 0.805837797893959\n"
+      "Model Score: 0.8135968963606134\n"
      ]
     }
    ],
    "source": [
-    "# Fitting Q\n",
-    "\n",
+    "# This is probably where my model goes wrong, as we're likely overfitting. Keep stratified k-fold\n",
     "x_train, x_test, y_train, y_test = train_test_split(confounders_and_treat, y_var, test_size=0.2)\n",
     "\n",
     "Q = HistGradientBoostingClassifier()\n",
@@ -109,86 +143,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 139,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#ATT(1997, 1997, 0) = \n",
-    "# G_g = 1 if Year_Imp == 1997\n",
-    "# E(G_g) = % of those first treated in 1997\n",
-    "# Y_t = projected insured rate at time t\n",
-    "# Y_{g-1} (we assume delta = 0 here) = projected insured rate at time g - 1 = 1996\n",
-    "# C = 1 if never treated\n",
-    "# m_nev = E(Y_t^C - Y_{g-1}^C | X, C = 1) so we want to estimate Y_t and Y_1996 for those never treated. \n",
-    "\n",
-    "#Then:\n",
-    "# ATT(1997, 1997,0) = E[G_g / E(G_g) * (Y_t - Y_{g-1} - m_nev)]\n",
-    "\n",
-    "t = 1997\n",
-    "base_year = 1996\n",
-    "\n",
-    "\n",
-    "basic_merged[\"t_indic\"] = (basic_merged[\"Year_Implemented\"] == 1997)\n",
-    "basic_merged[\"never_indic\"] = (basic_merged[\"Year_Implemented\"] == 1000000)\n",
-    "\n",
-    "\n",
-    "Yt = confounders_and_treat.copy()\n",
-    "Yg = confounders_and_treat.copy()\n",
-    "\n",
-    "Yt[\"year\"] = t\n",
-    "Yg[\"year\"] = base_year\n",
-    "\n",
-    "\n",
-    "\n",
-    "Yt = Q.predict_proba(Yt)[:,1]\n",
-    "Yg = Q.predict_proba(Yg)[:,1]\n",
-    "\n",
-    "Yt_C = confounders_and_treat.copy()\n",
-    "Yg_C = confounders_and_treat.copy()\n",
-    "\n",
-    "Yt_C[\"year\"] = t\n",
-    "Yg_C[\"year\"] = base_year\n",
-    "\n",
-    "Yt_C[\"treatment\"] = 0\n",
-    "Yg_C[\"treatment\"] = 0\n",
-    "\n",
-    "Yt_C = Q.predict_proba(Yt_C)[:,1]\n",
-    "Yg_C = Q.predict_proba(Yg_C)[:,1]\n",
-    "\n",
-    "term_1 = basic_merged[\"t_indic\"] / np.mean(basic_merged[\"t_indic\"])\n",
-    "term_2 = (Yt - Yg - (Yt_C - Yg_C))\n"
+    "Estimating causal effect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean: 4.8824392437633997e-05\n",
-      "STE: 2.170430722799204e-05\n",
-      "t: 2.2495254939381426\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Actually computing it now\n",
-    "term_1 = basic_merged[\"t_indic\"] / np.mean(basic_merged[\"t_indic\"])\n",
-    "term_2 = (Yt - Yg - (Yt_C - Yg_C))\n",
-    "\n",
-    "mean = np.mean(term_1 * term_2)\n",
-    "ste = np.std(term_1 * term_2) / np.sqrt(Yt.shape[0])\n",
-    "\n",
-    "print(\"Mean: \" + str(mean))\n",
-    "print(\"STE: \" + str(ste))\n",
-    "\n",
-    "print(\"t: \" + str( mean / ste))\n",
-    "\n",
-    "#so we get + .02% lmao, at least its significant. "
+    "#INSERT STUFF HERE! Not sure how to do it right. "
    ]
   }
  ],
