--- a/Initial Work.ipynb
+++ b/Initial Work.ipynb
@@ -150,6 +150,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our target estimand is $E[E[Y_1-Y_0|A=1,X]-E[Y_1-Y_0|A=0,X]|A=1]$   \n",
+    "\n",
+    "Where:   \n",
+    "\n",
+    "$Y_1 = 1$ if you have insurance in 1997 and 0 otherwise  \n",
+    "$Y_0 = 1$ if you have insurance in 1996 and 0 otherwise  \n",
+    "$A = 1$ if you are between 14 and 19 and 0 if you are between 20 and 26  \n",
+    "X are the covariates  \n",
+    "\n",
+    "So normally the model would predict the difference between the years for each individual, but we are not able to do that (unless we try to match individuals to the most similar ones in other years based on their covariates).\n",
+    "\n",
+    "If we assume that the individuals surveyed between the two years were mostly the same, then this equals:\n",
+    "\n",
+    "$E[E[Y_1|A=1,X,1997]-E[Y_0|A=1,X,1996]-E[Y_1|A=0,X,1997]+E[Y_0|A=0,X,1996]|A=1]$ \n",
+    "\n",
+    "Where given 1997 means given that the data in question was collected in 1997.\n",
+    "\n",
+    "Our high-level goal here is to use the 20 to 26 year-olds to get a baseline conditional change and then measure and casual effect we see beyond that. It is easy to get the overall change for the 20 to 26 year-olds (just take the average), but the question is if it is still possible to get the change conditional on covariates (eg on being in a low-income household).  \n",
+    "\n",
+    "So I understand our options as the following:  \n",
+    "1. Try to match pairs of similar individuals between years to do the analysis as usual.  \n",
+    "2. Train a single model over all the data to predict if individuals between 14 and 19 are insured given their covariates and then run it on the 1997 data and 1996 data, but I think this might not train the model to predict the differences in coverage rates for the individuals from 20 to 26 the way it would be able to if it was trained to predit $Y_1 - Y_0$ if the X are not constant between the years. Imagine a scenario such as the following: unemployed Irish men (who lets say choose not to have insurance to save money) always get a job and become insured in 1997. However, unemployed Irish men in both 1996 and 1997 do not have insurance. A model predicting the difference would predict that Irish men in 1996 would have insurance in 1997, but a model trained on the data between years would predict that unemployed Irish men in both years would be uninsured - is this a problem? This could be a problem for the matching approach as well, but might be somewhat alleviated since we might be able to still reasonably match individuals based off of their covariates which didnt' change.  \n",
+    "3. Train one model on 1996 data and another on 1997 data. If our estimator with this approach was unbiased then $E[Y_1|A=1,X,1997]-E[Y_0|A=1,X,1996]$ woul probably just recover the difference in insurance rates but the $E[Y_1|A=0,X,1997]+E[Y_0|A=0,X,1996]$ term would still make the overall estimate different than just calculating the difference in coverage between the two years. Additionally it seems like this approach would be the same as the 2nd one if a flexible enough machine learning method was used.\n",
+    "\n",
+    "Another potential problem here: we might need to assume the number of people turning 14 is equal to the number of people turning 20 so that we are finding the change in a population that (even though some of its individuals covariates are different) is at least the same size. But I am not sure about this.  \n",
+    "\n",
+    "I would love to hear you all's thoughts - I am probably messing something simple up here."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 145,
    "metadata": {},
@@ -161,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('.venv': venv)",
+   "display_name": "Python 3.9.14 ('Causality')",
    "language": "python",
    "name": "python3"
   },
@@ -175,12 +208,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.14"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e1117a3f67b6f9f07c9cd111c1d164c2c78fdaed6c7ec8e557fb0bc2f3980f47"
+    "hash": "960d2775473cb3d065e28c47b6bd81ca92f30da6618703e462b5ce909118ad7d"
    }
   }
  },
