--- a/Estimator_v5.ipynb
+++ b/Estimator_v5.ipynb
@@ -429,7 +429,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('.venv': venv)",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -443,12 +443,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e1117a3f67b6f9f07c9cd111c1d164c2c78fdaed6c7ec8e557fb0bc2f3980f47"
+    "hash": "9e793d3d37a9d01e5f087314cb504c3ad6d994fc01e5c78a4ec9a05e60220888"
    }
   }
  },
