--- a/Estimator_v7.ipynb
+++ b/Estimator_v7.ipynb
@@ -158,10 +158,13 @@
     "    # Normalizing years so that year =1 when treatment first occurs. \n",
     "    X_w_treatment[\"year\"] = X_w_treatment[\"year\"] - (year_of_interest - 1)\n",
     "\n",
+    "    # Creating lists to store the importance values for each feature\n",
+    "    # (and intercept for logistic regression) along with their accuracy\n",
     "    score = []\n",
     "    importance = []\n",
     "    intercept = []\n",
     "\n",
+    "    # Standardize the data before fitting\n",
     "    scaler = StandardScaler()\n",
     "    scaler.fit(X_w_treatment)\n",
     "    X = scaler.transform(X_w_treatment)\n",
@@ -219,6 +222,8 @@
     "\n",
     "    assert importance.size != 0 # Sanity check to make sure the Q model provided properly gave feature importances\n",
     "\n",
+    "    # These next few lines are converting the lists from earlier into an average\n",
+    "    # score for the model and a dictionary of importances for the features\n",
     "    avg_importance = np.mean(importance, axis=0).tolist()[0]\n",
     "\n",
     "    if len(intercept) != 0:\n",
@@ -232,7 +237,41 @@
     "            coef_dict[features[i] + \"_imp\"] = np.nan\n",
     "\n",
     "    assert np.isnan(predictions_matrix).sum() == 0  # Sanity check that we have no missings\n",
-    "    return predictions_matrix, year_vec, treat_vec, avg_score, coef_dict"
+    "    return predictions_matrix, year_vec, treat_vec, avg_score, coef_dict\n",
+    "\n",
+    "def treatment_k_fold_fit_and_predict(make_model, X:pd.DataFrame, A:np.array, n_splits:int, year_of_interest:int):\n",
+    "    # k-folding\n",
+    "    kf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
+    "\n",
+    "    G_g_and_C = np.logical_or(np.equal(A,year_of_interest), np.equal(A,1000000))\n",
+    "\n",
+    "    # subset for people in G_g or C, then reset index to allow for kfolding\n",
+    "    covariates = X.copy()\n",
+    "    covariates = covariates.loc[G_g_and_C]\n",
+    "    covariates = covariates.reset_index(drop=True)\n",
+    "\n",
+    "    treatment_status = (A == year_of_interest)\n",
+    "    treatment_status = treatment_status.loc[G_g_and_C]\n",
+    "    treatment_status = treatment_status.reset_index(drop=True)\n",
+    "\n",
+    "    g_matrix = np.full_like(treatment_status, np.nan, dtype=float)\n",
+    "\n",
+    "    # Generating vectors which will contain the true treatment/year combination for each covariate. \n",
+    "    # Normalizing years so that year =1 when treatment first occurs. \n",
+    "    #covariates.drop(\"year\", axis=1)  # We are interested in the covariates, not the year they were found in. \n",
+    "\n",
+    "    for train_index, test_index in kf.split(covariates, treatment_status):\n",
+    "        X_train = covariates.loc[train_index]\n",
+    "        y_train = treatment_status.loc[train_index]\n",
+    "        g = make_model()\n",
+    "        g.fit(X_train, y_train)\n",
+    "        g_matrix[test_index] = g.predict_proba(covariates.loc[test_index])[:, 1]\n",
+    "    print(g_matrix)\n",
+    "    assert np.isnan(g_matrix).sum() == 0  # Sanity check that we have no missings\n",
+    "    print(\"Max p:\" + str(np.max(g_matrix))) # Checking for overlap\n",
+    "    from matplotlib.pyplot import hist\n",
+    "    hist(g_matrix, density=True)\n",
+    "    return g_matrix"
    ]
   },
   {
