--- a/Estimator_v7.ipynb
+++ b/Estimator_v7.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +95,26 @@
     "# Generating list of confounders of interest, these are not necessarily optimal. \n",
     "list_of_confounders = [\"year\", \"stfips\", \"fownu18\", \"faminctm1\", \"a_maritl\", \"female\" , \"fpovcut\", \"povll\"]\n",
     "list_of_confounders += [\"anykids\", \"disability\", \"noemp_insured\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([50.])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basic_merged[basic_merged[\"Year_Implemented\"] == 1000000][\"stfips\"].unique()"
    ]
   },
   {
