--- a/Estimator_DR.ipynb
+++ b/Estimator_DR.ipynb
@@ -91,9 +91,8 @@
     "basic_merged = basic_merged[basic_merged[\"Year_Implemented\"].str.contains(\"always\")==False]  \n",
     "\n",
     "# I also drop the never states, as they may be substantively different from others, although this can be relaxed later.\n",
-    "basic_merged = basic_merged[basic_merged[\"Year_Implemented\"].str.contains(\"never\")==False]  # Only want to look at one for now. \n",
-    "\n",
-    "basic_merged[\"Year_Implemented\"] = basic_merged[\"Year_Implemented\"].astype(int)  # converting to int\n",
+    "basic_merged = basic_merged.replace(\"never\", \"1000000\") \n",
+    "basic_merged[\"Year_Implemented\"] = basic_merged[\"Year_Implemented\"].astype(int)  # converting to intbasic_merged = basic_merged[basic_merged[\"Year_Implemented\"].str.contains(\"never\")==False]  # Only want to look at one for now. \n",
     "\n",
     "# As we are treating >19 as the never-treated group, we set their year implemented as 1000000 >> 1999\n",
     "year_implemented_vector = basic_merged[\"Year_Implemented\"].copy()\n",
@@ -544,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
