--- a/Edited_DR.ipynb
+++ b/Edited_DR.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
     "basic_merged[\"group\"] = year_implemented_vector  # Equals the year you were first treated. If >=19 then treated at t = infty\n",
     "\n",
     "# Generating list of confounders of interest, these are not necessarily optimal. \n",
-    "list_of_confounders = [\"fownu18\", \"faminctm1\", \"a_maritl\", \"female\" , \"fpovcut\", \"povll\"]#, \"stfips\"]\n",
+    "list_of_confounders = [\"fownu18\", \"a_maritl\", \"female\" , \"povll\"]#, \"stfips\"]\n",
     "list_of_confounders += [\"anykids\", \"disability\", \"collgrad\", \"hsgrad\"] # removed coll + hs for now "
    ]
   },
@@ -908,34 +908,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [50], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39mfor\u001b[39;00m year \u001b[39min\u001b[39;00m [\u001b[39m1997\u001b[39m, \u001b[39m1998\u001b[39m, \u001b[39m1999\u001b[39m]:\n\u001b[0;32m      7\u001b[0m     \u001b[39mfor\u001b[39;00m response \u001b[39min\u001b[39;00m [\u001b[39m\"\u001b[39m\u001b[39mpubonly\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mprivonly\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39minsured\u001b[39m\u001b[39m\"\u001b[39m]:\n\u001b[1;32m----> 8\u001b[0m         new_model \u001b[39m=\u001b[39m ATT_event_study(year, response, list_of_confounders, basic_merged, large_randf, xgb_100)\n\u001b[0;32m      9\u001b[0m         all_years \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([all_years, new_model], ignore_index\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     11\u001b[0m all_years\u001b[39m.\u001b[39mhead()\n",
-      "Cell \u001b[1;32mIn [21], line 48\u001b[0m, in \u001b[0;36mATT_event_study\u001b[1;34m(year_of_interest, response, confounder_list, dataframe, G_model, Q_model)\u001b[0m\n\u001b[0;32m     45\u001b[0m treatment \u001b[39m=\u001b[39m state_level[\u001b[39m\"\u001b[39m\u001b[39mgroup\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m     46\u001b[0m outcome \u001b[39m=\u001b[39m state_level[response]\n\u001b[1;32m---> 48\u001b[0m predictions_matrix, year_vec, treat_vec, q_avg_score \u001b[39m=\u001b[39m outcome_k_fold_fit_and_predict(Q_model, \\\n\u001b[0;32m     49\u001b[0m                                    X\u001b[39m=\u001b[39;49mconfounders, y\u001b[39m=\u001b[39;49moutcome, A\u001b[39m=\u001b[39;49mtreatment, n_splits\u001b[39m=\u001b[39;49m\u001b[39m5\u001b[39;49m, \\\n\u001b[0;32m     50\u001b[0m                                     year_of_interest\u001b[39m=\u001b[39;49myear_of_interest)\n\u001b[0;32m     52\u001b[0m G_g_and_C \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlogical_or(np\u001b[39m.\u001b[39mequal(treatment,year_of_interest), np\u001b[39m.\u001b[39mequal(treatment,\u001b[39m1000000\u001b[39m))\n\u001b[0;32m     54\u001b[0m predictions_matrix \u001b[39m=\u001b[39m predictions_matrix[G_g_and_C,:]\n",
-      "Cell \u001b[1;32mIn [17], line 64\u001b[0m, in \u001b[0;36moutcome_k_fold_fit_and_predict\u001b[1;34m(make_model, X, y, A, n_splits, year_of_interest)\u001b[0m\n\u001b[0;32m     62\u001b[0m     predictions_matrix[test_index,col_num] \u001b[39m=\u001b[39m q\u001b[39m.\u001b[39mpredict_proba(X0\u001b[39m.\u001b[39mloc[test_index])[:, \u001b[39m1\u001b[39m]\n\u001b[0;32m     63\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1991\u001b[39m,\u001b[39m2009\u001b[39m):\n\u001b[1;32m---> 64\u001b[0m     X1 \u001b[39m=\u001b[39m X_w_treatment\u001b[39m.\u001b[39;49mcopy() \n\u001b[0;32m     65\u001b[0m     \u001b[39m# We do not adjust the year here, as we are only interested in their actual treatment status\u001b[39;00m\n\u001b[0;32m     66\u001b[0m     \u001b[39m# That means we don't need to change it, as it is already how we want it. \u001b[39;00m\n\u001b[0;32m     67\u001b[0m     X1[\u001b[39m\"\u001b[39m\u001b[39myear\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m j \u001b[39m# Changing the year to the year of interest\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\soren\\anaconda3\\envs\\Causality\\lib\\site-packages\\pandas\\core\\generic.py:6368\u001b[0m, in \u001b[0;36mNDFrame.copy\u001b[1;34m(self, deep)\u001b[0m\n\u001b[0;32m   6258\u001b[0m \u001b[39m@final\u001b[39m\n\u001b[0;32m   6259\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcopy\u001b[39m(\u001b[39mself\u001b[39m: NDFrameT, deep: bool_t \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m NDFrameT:\n\u001b[0;32m   6260\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   6261\u001b[0m \u001b[39m    Make a copy of this object's indices and data.\u001b[39;00m\n\u001b[0;32m   6262\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   6366\u001b[0m \u001b[39m    dtype: object\u001b[39;00m\n\u001b[0;32m   6367\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 6368\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_mgr\u001b[39m.\u001b[39;49mcopy(deep\u001b[39m=\u001b[39;49mdeep)\n\u001b[0;32m   6369\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_clear_item_cache()\n\u001b[0;32m   6370\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_constructor(data)\u001b[39m.\u001b[39m__finalize__(\u001b[39mself\u001b[39m, method\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcopy\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\soren\\anaconda3\\envs\\Causality\\lib\\site-packages\\pandas\\core\\internals\\managers.py:644\u001b[0m, in \u001b[0;36mBaseBlockManager.copy\u001b[1;34m(self, deep)\u001b[0m\n\u001b[0;32m    641\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    642\u001b[0m     new_axes \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxes)\n\u001b[1;32m--> 644\u001b[0m res \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapply(\u001b[39m\"\u001b[39;49m\u001b[39mcopy\u001b[39;49m\u001b[39m\"\u001b[39;49m, deep\u001b[39m=\u001b[39;49mdeep)\n\u001b[0;32m    645\u001b[0m new_refs: \u001b[39mlist\u001b[39m[weakref\u001b[39m.\u001b[39mref \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m] \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    646\u001b[0m \u001b[39mif\u001b[39;00m deep:\n",
-      "File \u001b[1;32mc:\\Users\\soren\\anaconda3\\envs\\Causality\\lib\\site-packages\\pandas\\core\\internals\\managers.py:347\u001b[0m, in \u001b[0;36mBaseBlockManager.apply\u001b[1;34m(self, f, align_keys, ignore_failures, **kwargs)\u001b[0m\n\u001b[0;32m    345\u001b[0m         applied \u001b[39m=\u001b[39m b\u001b[39m.\u001b[39mapply(f, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    346\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 347\u001b[0m         applied \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(b, f)(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    348\u001b[0m \u001b[39mexcept\u001b[39;00m (\u001b[39mTypeError\u001b[39;00m, \u001b[39mNotImplementedError\u001b[39;00m):\n\u001b[0;32m    349\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m ignore_failures:\n",
-      "File \u001b[1;32mc:\\Users\\soren\\anaconda3\\envs\\Causality\\lib\\site-packages\\pandas\\core\\internals\\blocks.py:549\u001b[0m, in \u001b[0;36mBlock.copy\u001b[1;34m(self, deep)\u001b[0m\n\u001b[0;32m    547\u001b[0m values \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvalues\n\u001b[0;32m    548\u001b[0m \u001b[39mif\u001b[39;00m deep:\n\u001b[1;32m--> 549\u001b[0m     values \u001b[39m=\u001b[39m values\u001b[39m.\u001b[39;49mcopy()\n\u001b[0;32m    550\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)(values, placement\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_mgr_locs, ndim\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mndim)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find a good Q model for the doubly robust estimator\n",
     "# Test functions on 1998 since it has the most data, but don't compute for every\n",
     "# year since that would take prohibitively long\n",
     "all_years = pd.DataFrame()\n",
     "\n",
-    "for year in [1997, 1998, 1999]:\n",
+    "for year in [1997, 1998, 1999, 2008,1000000]:\n",
     "    for response in [\"pubonly\",\"privonly\",\"insured\"]:\n",
     "        new_model = ATT_event_study(year, response, list_of_confounders, basic_merged, large_randf, xgb_100)\n",
     "        all_years = pd.concat([all_years, new_model], ignore_index=True)\n",
