--- a/Edited_DR.ipynb
+++ b/Edited_DR.ipynb
@@ -798,13 +798,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [
@@ -910,7 +903,15 @@
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max p:0.7248093938018448\n"
+     ]
+    }
+   ],
    "source": [
     "# Find a good Q model for the doubly robust estimator\n",
     "# Test functions on 1998 since it has the most data, but don't compute for every\n",
