Putting old files in the old notebooks

--- a/Edited_DR.ipynb
+++ b/Edited_DR.ipynb
@@ -222,7 +222,7 @@
     "    covariates = covariates.loc[G_g_and_C]\n",
     "    covariates = covariates.reset_index(drop=True)\n",
     "\n",
-    "    # Creating lists to store the accuracy\n",
+    "    # Creating list to store the accuracy\n",
     "    score = []\n",
     "\n",
     "    treatment_status = (A == year_of_interest)\n",
@@ -949,12 +949,45 @@
     "# year since that would take prohibitively long\n",
     "all_years = pd.DataFrame()\n",
     "\n",
-    "for year in [1997, 1998, 1999, 2008,1000000]:\n",
+    "for year in [1000000]:\n",
     "    for response in [\"pubonly\",\"privonly\",\"insured\"]:\n",
     "        new_model = ATT_event_study(year, response, list_of_confounders, basic_merged, large_randf, xgb_100)\n",
     "        all_years = pd.concat([all_years, new_model], ignore_index=True)\n",
     "\n",
     "all_years.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 1 is out of bounds for axis 1 with size 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [98], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39mfor\u001b[39;00m year \u001b[39min\u001b[39;00m [\u001b[39m1000000\u001b[39m]:\n\u001b[0;32m      7\u001b[0m     \u001b[39mfor\u001b[39;00m response \u001b[39min\u001b[39;00m [\u001b[39m\"\u001b[39m\u001b[39mpubonly\u001b[39m\u001b[39m\"\u001b[39m]:\n\u001b[1;32m----> 8\u001b[0m         new_model \u001b[39m=\u001b[39m ATT_event_study(year, response, list_of_confounders, basic_merged, randf, logistic)\n\u001b[0;32m      9\u001b[0m         never_implemented \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([never_implemented, new_model], ignore_index\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     11\u001b[0m never_implemented\u001b[39m.\u001b[39mhead()\n",
+      "Cell \u001b[1;32mIn [21], line 60\u001b[0m, in \u001b[0;36mATT_event_study\u001b[1;34m(year_of_interest, response, confounder_list, dataframe, G_model, Q_model)\u001b[0m\n\u001b[0;32m     57\u001b[0m outcome \u001b[39m=\u001b[39m outcome[G_g_and_C]\n\u001b[0;32m     59\u001b[0m \u001b[39m# the 2*i'th column is always the untreated vec, and the (2*i)+1 is treated. \u001b[39;00m\n\u001b[1;32m---> 60\u001b[0m g_matrix, g_avg_score \u001b[39m=\u001b[39m treatment_k_fold_fit_and_predict(G_model, X\u001b[39m=\u001b[39;49mconfounders, A\u001b[39m=\u001b[39;49mtreatment, n_splits\u001b[39m=\u001b[39;49m\u001b[39m5\u001b[39;49m, \\\n\u001b[0;32m     61\u001b[0m                                             year_of_interest\u001b[39m=\u001b[39;49myear_of_interest)\n\u001b[0;32m     63\u001b[0m \u001b[39m# Weight on the first term. \u001b[39;00m\n\u001b[0;32m     64\u001b[0m \u001b[39m# This depends only on g so we can pull it out here\u001b[39;00m\n\u001b[0;32m     65\u001b[0m w_g \u001b[39m=\u001b[39m (treat_vec \u001b[39m==\u001b[39m year_of_interest) \u001b[39m#* (year_vec == year) # We only want the ATT, so we weight appropriately\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn [17], line 109\u001b[0m, in \u001b[0;36mtreatment_k_fold_fit_and_predict\u001b[1;34m(make_model, X, A, n_splits, year_of_interest)\u001b[0m\n\u001b[0;32m    107\u001b[0m     g\u001b[39m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m    108\u001b[0m     score\u001b[39m.\u001b[39mappend(g\u001b[39m.\u001b[39mscore(X_test, y_test))\n\u001b[1;32m--> 109\u001b[0m     g_matrix[test_index] \u001b[39m=\u001b[39m g\u001b[39m.\u001b[39;49mpredict_proba(covariates\u001b[39m.\u001b[39;49mloc[test_index])[:, \u001b[39m1\u001b[39;49m]\n\u001b[0;32m    110\u001b[0m \u001b[39massert\u001b[39;00m np\u001b[39m.\u001b[39misnan(g_matrix)\u001b[39m.\u001b[39msum() \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m  \u001b[39m# Sanity check that we have no missings\u001b[39;00m\n\u001b[0;32m    111\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mMax p:\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(np\u001b[39m.\u001b[39mmax(g_matrix))) \u001b[39m# Checking for overlap\u001b[39;00m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 1 is out of bounds for axis 1 with size 1"
+     ]
+    }
+   ],
+   "source": [
+    "# Find a good Q model for the doubly robust estimator\n",
+    "# Test functions on 1998 since it has the most data, but don't compute for every\n",
+    "# year since that would take prohibitively long\n",
+    "never_implemented = pd.DataFrame()\n",
+    "\n",
+    "for year in [1000000]:\n",
+    "    for response in [\"pubonly\"]:\n",
+    "        new_model = ATT_event_study(year, response, list_of_confounders, basic_merged, randf, logistic)\n",
+    "        never_implemented = pd.concat([never_implemented, new_model], ignore_index=True)\n",
+    "\n",
+    "never_implemented.head()"
    ]
   },
   {
