--- a/AIPTW_confounders_dropped.ipynb
+++ b/AIPTW_confounders_dropped.ipynb
@@ -411,8 +411,8 @@
     "all_years_from_csv['adjusted_year'] = all_years_from_csv[\"year\"] - all_years_from_csv[\"treat_year\"]\n",
     "all_years_from_csv['`Implementation Year`'] = all_years_from_csv[\"treat_year\"].apply(lambda x: str(x))\n",
     "all_pre_treat = all_years_from_csv[(all_years_from_csv['adjusted_year'] < 0)].copy()\n",
-    "all_pre_treat['att-error'] = all_pre_treat['att'] - all_pre_treat['ste']*1.96\n",
-    "all_pre_treat['att+error'] = all_pre_treat['att'] + all_pre_treat['ste']*1.96\n",
+    "all_pre_treat['att-error'] = all_pre_treat['att'] - all_pre_treat['ste']\n",
+    "all_pre_treat['att+error'] = all_pre_treat['att'] + all_pre_treat['ste']\n",
     "all_pre_treat['treat_year'] = all_pre_treat['treat_year'].apply(lambda x: str(x))\n",
     "\n",
     "p = ggplot(all_pre_treat, aes(x='adjusted_year', y='att', color = '`Implementation Year`', group='`Implementation Year`')) + \\\n",
@@ -461,7 +461,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.14 ('Causality')",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -475,12 +475,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.14"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "960d2775473cb3d065e28c47b6bd81ca92f30da6618703e462b5ce909118ad7d"
+    "hash": "e1117a3f67b6f9f07c9cd111c1d164c2c78fdaed6c7ec8e557fb0bc2f3980f47"
    }
   }
  },
